src/test/regression_testing/test_files/Go/NPD/bad/test04.go
package main

import "fmt"

func test4_main() {
    var m map[string]int 
    m["key"] = 42 
}

func main() {
	test4_main()
}